<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:windowSoftInputMode="stateVisible|adjustResize"
        android:focusableInTouchMode="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/backButton"
            style="?attr/materialIconButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back_button"
            app:icon="@drawable/ic_arrow_back"
            app:iconSize="26dp"
            app:iconTint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/newIncomeTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/addingFinance"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/expenseFormButton"
            style="@style/Theme.Organized.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/expenseFormText"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@id/incomeFormButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/backButton" />

        <Button
            android:id="@+id/incomeFormButton"
            style="@style/Theme.Organized.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/budgetFormText"
            android:textSize="20sp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@id/goalFormButton"
            app:layout_constraintStart_toEndOf="@id/expenseFormButton"
            app:layout_constraintTop_toBottomOf="@id/backButton" />

        <ImageView
            android:id="@+id/strokeSelected"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/stroke_selected"
            app:layout_constraintEnd_toEndOf="@id/incomeFormButton"
            app:layout_constraintStart_toStartOf="@id/incomeFormButton"
            app:layout_constraintTop_toBottomOf="@id/incomeFormButton" />

        <Button
            android:id="@+id/goalFormButton"
            style="@style/Theme.Organized.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/goalFormText"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/incomeFormButton"
            app:layout_constraintTop_toBottomOf="@id/backButton" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameOfBudgetField"
            style="@style/Theme.Organized.TextInputLayout.OutlineBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:hint="Pagador"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/expenseFormButton">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameOfBudgetTextView"
                android:hint="Empresa"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/typeOfIncomeField"
            style="@style/Theme.Organized.TextInputLayout.OutlineBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameOfBudgetField">

            <AutoCompleteTextView
                android:focusable="false"
                android:textColor="@color/white"
                android:id="@+id/typeOfIncomeTextView"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="Tipo de ganho"
                android:inputType="none"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dayIncomeField"
            style="@style/Theme.Organized.TextInputLayout.OutlineBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/typeOfIncomeField"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/ic_calendar_today"
            app:helperTextEnabled="true"
            app:helperText="@string/dayFinance"
            app:helperTextTextColor="@color/text_input_selector"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dateIncomeText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/date"
                android:inputType="none"
                android:textColor="@color/white"
                android:focusable="false"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/amountReceivedField"
            style="@style/Theme.Organized.TextInputLayout.OutlineBox"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:hint="@string/amountField"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dayIncomeField">

            <com.google.android.material.textfield.TextInputEditText
                android:hint="20.50"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/recurrentCheck"
            style="@style/Theme.Organized.RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:text="@string/recurrentExpense"
            app:layout_constraintTop_toBottomOf="@id/amountReceivedField" />

        <CheckBox
            android:id="@+id/coupleFinanceCheck"
            style="@style/Theme.Organized.RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:text="Ganho do casal"
            app:layout_constraintTop_toBottomOf="@id/recurrentCheck" />

        <Button
            android:id="@+id/addNewIncomeButton"
            style="@style/Theme.Organized.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin"
            android:paddingLeft="40dp"
            android:paddingTop="15dp"
            android:paddingRight="40dp"
            android:paddingBottom="15dp"
            android:text="@string/addFinance"
            android:textSize="20sp"
            app:icon="@drawable/ic_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/coupleFinanceCheck" />

        <include
            android:id="@+id/progress_bar"
            android:visibility="invisible"
            layout="@layout/progress_bar" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>